force-app/main/default/objects/Cost_Centre__c/Cost_Centre__c.object-meta.xml
<CustomObject>
    <description>Populated from data migrated in PRIME. This is a reference to the cost center for a researcher</description>
    <label>Cost Centre</label>
    <nameField>
        <label>Cost Centre Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Centres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>