force-app/main/default/objects/Cost_Centre__c/fields/I_RS_Active__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Active__c</fullName>
    <description>Active is TRUE if current date is greater or equal to &quot;Today&quot; and less than or equal to &quot;Today&quot;</description>
    <formula>AND (

( I_RS_Start_Date__c &lt;=  TODAY() ),

OR(
( I_RS_End_Date__c &gt;=   TODAY()) ,
( ISBLANK(I_RS_End_Date__c )) 
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>