force-app/main/default/objects/Cost_Centre__c/fields/I_RS_Cost_Centre_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Cost_Centre_Code__c</fullName>
    <description>Cost center code</description>
    <label>Cost Centre Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>