force-app/main/default/objects/Cost_Centre__c/fields/I_RS_Finance_Person_Assigned__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Finance_Person_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Person Assigned</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.I_RS_Related_User__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.I_RS_Related_User__r.I_RS_Is_Researcher_User__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cost Centres</relationshipLabel>
    <relationshipName>Cost_Centres</relationshipName>
    <type>Lookup</type>
</CustomField>