force-app/main/default/objects/Cost_Centre__c/fields/I_RS_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>