force-app/main/default/objects/Cost_Centre__c/fields/I_RS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>