force-app/main/default/objects/Cost_Centre__c/listViews/All_Cost_Centres.listView-meta.xml
<ListView>
    <fullName>All_Cost_Centres</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Description__c</columns>
    <columns>I_RS_Cost_Centre_Code__c</columns>
    <columns>I_RS_Is_Active__c</columns>
    <columns>I_RS_Start_Date__c</columns>
    <columns>I_RS_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Cost Centres</label>
</ListView>